# ndtm-simulator

./: .travis.yml  CMakeLists.txt  README.md  mtnd_simulator.c
src/: CMakeLists.txt  main.c  main.h
test/: test_cases.sh
test/cases/: FancyLoops2.output
